# SimpleEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  imgui.ini
assets/shaders/: common.glsl  light.frag  light.vert  test.frag  test.vert
shaders/: test.frag  test.vert
src/: main.cpp
src/application/: application.cpp  application.hpp  camera.cpp  camera.hpp
src/application/rendering/: game_renderer.cpp  game_renderer.hpp
src/application/rendering/test_renderer/: gl_test_renderer.cpp  gl_test_renderer.hpp  test_renderer.cpp  test_renderer.hpp
src/core/: application.cpp  application.hpp  assert.hpp  clock.hpp  exception.hpp  logger.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
src/core/input/: keyboard.hpp  mouse.hpp
src/engine/core/: assents_manager.cpp  assert.hpp  assets_manager.cpp  assets_manager.hpp  clock.hpp  exception.hpp  filesystem.hpp  logger.cpp  logger.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
src/engine/core/input/: keyboard.hpp  mouse.hpp
src/engine/renderer/: gl_renderer.cpp  gl_renderer.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/engine/renderer/descriptors/: pipeline_descriptors.hpp  shader_program_descriptors.hpp
src/engine/renderer/open_gl/: gl_buffer.cpp  gl_buffer.hpp  gl_shader.cpp  gl_shader.hpp  gl_shader_program.cpp  gl_shader_program.hpp  gl_texture.cpp  gl_texture.hpp  gl_vertex_array.cpp  gl_vertex_array.hpp  open_gl_shader.cpp  open_gl_shader.hpp  open_gl_shader_program.cpp  open_gl_shader_program.hpp
src/engine/renderer/vulkan/: vulkan_buffer_manager.cpp  vulkan_buffer_manager.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_descriptors.cpp  vulkan_descriptors.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_pipeline_manager.cpp  vulkan_pipeline_manager.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_shader_manager.cpp  vulkan_shader_manager.hpp  vulkan_shader_module.cpp  vulkan_shader_module.hpp  vulkan_shader_program.cpp  vulkan_shader_program.hpp  vulkan_shader_program_manager.cpp  vulkan_shader_program_manager.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_utils.hpp
src/renderer/: renderer_backend.cpp  renderer_backend.hpp  renderer_frontend.cpp  renderer_frontend.hpp  renderer_types.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_buffer_manager.cpp  vulkan_buffer_manager.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_pipeline_manager.cpp  vulkan_pipeline_manager.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_shader_module.cpp  vulkan_shader_module.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_utils.hpp
